working out spacing issues

--- a/src/less/_site-layout.less
+++ b/src/less/_site-layout.less
@@ -36,7 +36,7 @@
 }
 
 .main-content-row {
-  padding: @content-container-top-and-bottom-padding @content-container-side-padding;
+  padding: 0 @content-container-side-padding;
   max-width: @site-max-width;
   margin: 0 auto;
 }
@@ -80,6 +80,10 @@
 
 .post-list .main-content-column {
   margin: 0;
+}
+
+.entry-header {
+  margin-top: 5rem;
 }
 
 .sidebar-content-column {
