--- a/src/less/templates/_posts.less
+++ b/src/less/templates/_posts.less
@@ -1,30 +1,32 @@
-article {
-  padding: 2.5rem 0;
-  border-bottom: 1px solid #eee;
-  h2 {
-    margin-top: 0;
-    a {
-      color: @site-color-black;
+.post-list {
+  article {
+    padding: 2.5rem 0;
+    border-bottom: 1px solid #eee;
+    h2 {
+      margin-top: 0;
+      a {
+        color: @site-color-black;
+        text-decoration: none;
+      }
+    }
+    .post-thumbnail {
+      overflow: hidden;
+      margin-bottom: 1.5rem;
+      img {
+        max-height: 500px;
+      }
+    }
+    .byline {
+      color: @site-color-gray-dark;
+      font-style: italic;
       text-decoration: none;
+      margin-bottom: 0;
     }
-  }
-  .post-thumbnail {
-    overflow: hidden;
-    margin-bottom: 1.5rem;
-    img {
-      max-height: 500px;
+    .entry-title {
+      margin-top: 0.5rem;
     }
-  }
-  .byline {
-    color: @site-color-gray-dark;
-    font-style: italic;
-    text-decoration: none;
-    margin-bottom: 0;
-  }
-  .entry-title {
-    margin-top: 0.5rem;
-  }
-  &:first-of-type {
-    padding-top: 0;
+    &:first-of-type {
+      padding-top: 0;
+    }
   }
 }
